<package>
  <name>topic_synchronizer</name>
  <version>1.16.0</version>
  <description>
    topic_synchronizer
  </description>
  <author>DaegyuLee</author>
  <maintainer email="lee.dk@kaist.ac.kr">Daegyu Lee</maintainer>
  <license>BSD</license>
  <!-- <url></url> -->

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
